修改目录测试

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="tm-top-container">
       <!-- Menu -->
       <nav id="tmNav" class="tm-nav">
-        <a class="tm-navbar-menu" href="#">Menu</a>
+        <a class="tm-navbar-menu" href="#">目录</a>
         <ul class="tm-nav-links">
           <li class="tm-nav-item active">
             <a href="#" data-linkid="0" data-align="right" class="tm-nav-link">Intro</a>
