--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- 
+    git add .
+    git commit -m ""
+    git push -u origin master
+ -->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>The Card HTML5 Template </title>
+  <title>> < !!</title>
   <!-- load CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
   <!-- Google web font "Open Sans" -->
@@ -30,29 +34,29 @@
   <div class="tm-main-container">
 
     <div class="tm-top-container">
-      <!-- Menu -->
+      <!-- 右边导航菜单-->
       <nav id="tmNav" class="tm-nav">
         <a class="tm-navbar-menu" href="#">目录</a>
         <ul class="tm-nav-links">
           <li class="tm-nav-item active">
-            <a href="#" data-linkid="0" data-align="right" class="tm-nav-link">Intro</a>
+            <a href="#" data-linkid="0" data-align="right" class="tm-nav-link">简介</a>
           </li>
           <li class="tm-nav-item">
-            <a href="#" data-linkid="1" data-align="right" class="tm-nav-link">About</a>
+            <a href="#" data-linkid="1" data-align="right" class="tm-nav-link">关于</a>
           </li>
           <li class="tm-nav-item">
-            <a href="#" data-linkid="2" data-align="middle" class="tm-nav-link">Work</a>
+            <a href="#" data-linkid="2" data-align="middle" class="tm-nav-link">经营</a>
           </li>
           <li class="tm-nav-item">
-            <a href="#" data-linkid="3" data-align="left" class="tm-nav-link">Contact</a>
+            <a href="#" data-linkid="3" data-align="left" class="tm-nav-link">联系</a>
           </li>
         </ul>
       </nav>
 
-      <!-- Site header -->
+      <!-- 网站主题 头 -->
       <header class="tm-site-header-box tm-bg-dark">
-        <h1 class="tm-site-title">The Card</h1>
-        <p class="mb-0 tm-site-subtitle">Free HTML Template for you</p>
+        <h1 class="tm-site-title">サン 、San</h1>
+        <p class="mb-0 tm-site-subtitle">以后你住在森林，我住在达达拉 ，我会永远呆在这里，想见你的时候，我会骑亚克路去找你。</p>
       </header>
     </div>
     <!-- tm-top-container -->
@@ -65,13 +69,12 @@
 
             <!-- Section 0 Introduction -->
             <section class="tm-section tm-section-0">
-              <h2 class="tm-section-title mb-3 font-weight-bold">Introduction</h2>
+              <h2 class="tm-section-title mb-3 font-weight-bold">记录&日常</h2>
               <div class="tm-textbox tm-bg-dark">
-                <p>Etiam eu nisl sit amet odio convallis feugiat. Nulla vitae dui quam. Maecenas rhoncus tortor varius urna
-                  rhoncus, ultricies consequat nulla posuere.</p>
-                <p class="mb-0">Please tell your friends about tooplate website for free HTML templates. This is 70% alpha background.</p>
+                <p>有时候我们是被别人诅咒，有时候就轮到我们自已去诅咒别人！</p>
+                <p class="mb-0">“我想以没有仇恨的眼睛看世界。不管你曾经被伤害得有多深，总会有一个人的出现，让你原谅之前生活对你所有的刁难。”</p>
               </div>
-              <a href="#" class="tm-link">Read More</a>
+              <a href="#" class="tm-link">TO TOP</a>
             </section>
 
             <!-- Section 1 About Me -->
