--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <a href="#" class="tm-link">TO TOP</a>
             </section>
 
-            <!-- Section 1 About Me -->
+            <!-- Section 1 关于 Me -->
             <section class="tm-section tm-section-1">
               <div class="tm-textbox tm-textbox-2 tm-bg-dark">
                 <h2 class="tm-text-blue mb-4">About Me</h2>
@@ -86,7 +86,7 @@
               </div><div class="tlinks">Collect from <a href="http://www.cssmoban.com/" >建站模板</a></div>
             </section>
 
-            <!-- Section 2 Work (Gallery) -->
+            <!-- Section 2 经营 (Gallery) -->
             <section class="tm-section tm-section-2 mx-auto">
               <div class="grid tm-gallery">
                 <figure class="effect-goliath tm-gallery-item">
@@ -95,7 +95,7 @@
                     <h2>Thoughtful
                       <span>Goliath</span>
                     </h2>
-                    <p>When Goliath comes out, you should run.</p>
+                    <p id="goTo">When Goliath comes out, you should run.</p>
                     <a href="img/01.jpg">View more</a>
                   </figcaption>
                 </figure>
@@ -212,7 +212,7 @@
               </div>
             </section>
 
-            <!-- Section 3 Contact -->
+            <!-- Section 3 联系 -->
             <section class="tm-section tm-section-3 tm-section-left">
               <form action="" class="tm-contact-form" method="post">
                 <div class="form-group mb-4">
@@ -243,9 +243,9 @@
 
       <!-- Footer -->
       <footer>
-        || Copyright &copy; 2018 Company Name 
-        
-        || Design:  Tooplate / More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a> ||
+        || Copyright &copy; 2019 Company Name 
+         <a href="https://www.bilibili.com/" target="_blank" title="哔哩哔哩">日常</a>
+          - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">帖子</a> ||
       </footer>
     </div>
   </div>
@@ -416,6 +416,9 @@
           enabled: true
         }
       });
+      // $('#goTo').click=function(){
+      //   console.log(666)
+      // }
     }
   </script>
 </body>
